using UnityEngine;
using UnityEditor;
using System.IO;
using System.Collections.Generic;
using System.Globalization;

public class QuestGenerator : MonoBehaviour
{
    [MenuItem("Tools/Generate Quests From File")]
    public static void GenerateQuests()
    {
        string path = "Assets/Resources/Quests/quest_list.txt";
        if (!File.Exists(path))
        {
            Debug.LogWarning("‚ùå –§–∞–π–ª quest_list.txt –Ω–µ –Ω–∞–π–¥–µ–Ω –ø–æ –ø—É—Ç–∏: " + path);
            return;
        }

        string[] lines = File.ReadAllLines(path);
        List<Quest> newQuests = new List<Quest>();

        foreach (string line in lines)
        {
            if (string.IsNullOrWhiteSpace(line) || line.StartsWith("#"))
                continue;

            string[] parts = line.Split('|');
            if (parts.Length < 7) // Updated to require 7 parts including QuestType
            {
                Debug.LogWarning("‚ùó –ù–µ–≤–µ—Ä–Ω—ã–π —Ñ–æ—Ä–º–∞—Ç —Å—Ç—Ä–æ–∫–∏ (–æ–∂–∏–¥–∞–µ—Ç—Å—è 7 —á–∞—Å—Ç–µ–π —Å QuestType): " + line);
                continue;
            }

            // Check if any essential parts are empty
            if (string.IsNullOrWhiteSpace(parts[0]) || string.IsNullOrWhiteSpace(parts[1]))
            {
                Debug.LogWarning("‚ùó –ü—É—Å—Ç–æ–µ –Ω–∞–∑–≤–∞–Ω–∏–µ –∏–ª–∏ –æ–ø–∏—Å–∞–Ω–∏–µ –∫–≤–µ—Å—Ç–∞: " + line);
                continue;
            }

            string title = parts[0].Trim();
            string description = parts[1].Trim();
            int minLevel;
            int maxLevel;
            int clicks;
            float multiplier = 1f;
            Rarity baseRarity;
            QuestType questType = QuestType.Gather; // Default quest type

            if (!int.TryParse(parts[2].Trim(), out minLevel) || !int.TryParse(parts[3].Trim(), out maxLevel) || !int.TryParse(parts[4].Trim(), out clicks))
            {
                Debug.LogWarning("‚ùó –û—à–∏–±–∫–∞ –ø–∞—Ä—Å–∏–Ω–≥–∞ —á–∏—Å–ª–æ–≤—ã—Ö –∑–Ω–∞—á–µ–Ω–∏–π: " + line);
                continue;
            }
            
            if (!System.Enum.TryParse(parts[5].Trim(), true, out baseRarity))
            {
                Debug.LogWarning("‚ùó –û—à–∏–±–∫–∞ –ø–∞—Ä—Å–∏–Ω–≥–∞ —Ä–µ–¥–∫–æ—Å—Ç–∏: " + line);
                continue;
            }

            // Parse multiplier (index 6)
            if (parts.Length > 6 && !string.IsNullOrWhiteSpace(parts[6]))
            {
                if (!float.TryParse(parts[6].Trim(), NumberStyles.Float, CultureInfo.InvariantCulture, out multiplier))
                {
                    Debug.LogWarning("‚ùó –û—à–∏–±–∫–∞ –ø–∞—Ä—Å–∏–Ω–≥–∞ –º–Ω–æ–∂–∏—Ç–µ–ª—è: " + line);
                    continue;
                }
            }
            
            // Parse quest type (index 7)
            if (parts.Length > 7 && !string.IsNullOrWhiteSpace(parts[7]))
            {
                if (!System.Enum.TryParse(parts[7].Trim(), true, out questType))
                {
                    Debug.LogWarning("‚ùó –û—à–∏–±–∫–∞ –ø–∞—Ä—Å–∏–Ω–≥–∞ —Ç–∏–ø–∞ –∫–≤–µ—Å—Ç–∞: " + parts[7].Trim() + " –≤ —Å—Ç—Ä–æ–∫–µ: " + line);
                    Debug.LogWarning("‚ùó –î–æ—Å—Ç—É–ø–Ω—ã–µ —Ç–∏–ø—ã: Gather, Combat, Explore, Craft, Escort");
                    questType = QuestType.Gather; // Default fallback
                }
            }

            Quest quest = ScriptableObject.CreateInstance<Quest>();
            quest.questTitle = title;
            quest.questDescription = description;
            quest.minLevelRequired = minLevel;
            quest.maxLevelAllowed = maxLevel;
            quest.clickRequirement = clicks;
            quest.rewardRarityBase = baseRarity;
            quest.rewardMultiplier = multiplier;
            quest.questType = questType; // Set the quest type

            string assetPath = $"Assets/Resources/Quests/{title.Replace(" ", "_")}.asset";
            AssetDatabase.CreateAsset(quest, assetPath);
            newQuests.Add(quest);
        }

        AssetDatabase.SaveAssets();
        AssetDatabase.Refresh();

        QuestDatabase db = Resources.Load<QuestDatabase>("QuestDatabase");
        if (db != null)
        {
            db.SetQuests(newQuests);
            EditorUtility.SetDirty(db);
            Debug.Log($"‚úÖ –ö–≤–µ—Å—Ç—ã —É—Å–ø–µ—à–Ω–æ –æ–±–Ω–æ–≤–ª–µ–Ω—ã –≤ QuestDatabase. –°–æ–∑–¥–∞–Ω–æ: {newQuests.Count} –∫–≤–µ—Å—Ç–æ–≤");
            
            // Log quest type distribution
            var typeCount = new System.Collections.Generic.Dictionary<QuestType, int>();
            foreach (var quest in newQuests)
            {
                if (!typeCount.ContainsKey(quest.questType))
                    typeCount[quest.questType] = 0;
                typeCount[quest.questType]++;
            }
            
            Debug.Log("üîç –†–∞—Å–ø—Ä–µ–¥–µ–ª–µ–Ω–∏–µ –ø–æ —Ç–∏–ø–∞–º –∫–≤–µ—Å—Ç–æ–≤:");
            foreach (var pair in typeCount)
            {
                Debug.Log($"  {pair.Key}: {pair.Value} –∫–≤–µ—Å—Ç–æ–≤");
            }
        }
        else
        {
            Debug.LogWarning("‚ùå QuestDatabase –Ω–µ –Ω–∞–π–¥–µ–Ω –≤ Resources!");
        }
    }
    
    /// <summary>
    /// Validates if a string represents a valid QuestType
    /// </summary>
    private static bool IsValidQuestType(string typeString)
    {
        string[] validTypes = { "Gather", "Combat", "Explore", "Craft", "Escort" };
        return System.Array.Exists(validTypes, t => t.Equals(typeString, System.StringComparison.OrdinalIgnoreCase));
    }
}
